--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -15,5 +15,5 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_ACCESS_ACCESS_ID }}
-          aws-region: $({ env.AWS_REGION })
+          aws-secret-access-key: ${{ secrets.AWS_ACCESS_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
